Fixes gap appearing in nav items

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -526,6 +526,11 @@ input[type="search"]::-webkit-search-decoration {
 	background-color: @color-swatch2;
 	z-index: 1;
 }
+div.widget .extendednavigation ul li, 
+div.widget.extendednavigation ul li {
+	display: inline-block;
+	float: left;
+}
 
 .widget .extendednavigation {
 	li > .text {
@@ -1013,6 +1018,7 @@ input[type="search"]::-webkit-search-decoration {
 		}
 		ul {
 			padding: 0;
+			padding-top: 40px;
 		}
 	}
 	.widget.companyname {
